2012-11-10  JJ Allaire <jj@rstudio.org>

        * src/Attributes.cpp: add optional hook for inclusion of package types

2012-11-09  Romain Francois <romain@r-enthusiasts.com>

        * R/Attributes.R: Passing verbose from evalCpp to cppFunction
        * include/RcppCommon.h: include <limits> instead of <limits.h>
        * include/Rcpp/vector/CharacterVectorExtractionIterator.h: iterator class
        to quickly iterate over the content of a CharacterVector. The content that 
        is iterated over is to be considered read-only. 

2012-11-08  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: special sourceCpp handling for file within the src
        directory of a package; use .h as suffix for generated headers
        * src/Attributes.cpp: add information on arguments to Rcpp module;
        use inline rather than static linkage for generated C++ shims;
        generated headers: add header guard and use .h suffix;
        * man/cppFunction.Rd: update documentation
        * man/sourceCpp.Rd: update documentation
        * man/evalCpp.Rd: update documentation
        * man/exportAttribute.Rd: update documentation
        * man/interfacesAttribute.Rd: update documentation


2012-11-08  Romain Francois <romain@r-enthusiasts.com>

        * R/Module.R: Module functions taking no arguments don't get the ellipsis
        anymore in their formals
        * src/Module.cpp: passing up the number of arguments of the function
        * R/Attributes.R: added evalCpp
        * man/evalCpp.Rd: documentation for evalCpp
        
2012-11-07  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: derive depends from package LinkingTo; change 
        sourceCpp plugin parameter to depends and respect Rcpp::interfaces
        generated include files
        * src/Attributes.cpp: validate exported C++ functions before calling;
        use static rather than inline for stubs to avoid call-site bloat;