@@ -1,6 +1,10 @@
 2012-11-10  JJ Allaire <jj@rstudio.org>
 
         * src/Attributes.cpp: add optional hook for inclusion of package types
+        * examples/Attributes/Export.cpp: example use of Rcpp::export
+        * examples/Attributes/Depends.cpp: example use of Rcpp::depends
+        * examples/Attributes/sourceCpp.R: example use of sourceCpp()
+        * examples/Attributes/cppFunction.R: example use of cppFunction()
 
 2012-11-09  Romain Francois <romain@r-enthusiasts.com>
 
